fixing spacing

--- a/webstyle.css
+++ b/webstyle.css
@@ -168,6 +168,7 @@ nav h1 {
     font-weight: 400;
     background-color: var(--nav-color);
     border: none;
+    margin-top: 30px;
 }
 
 nav h1:hover {
@@ -179,7 +180,7 @@ nav a {
     color: var(--text-color);
     padding: 10px;
     margin: 10px;
-    margin-top: 20px;
+    margin-top: 30px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -206,6 +207,7 @@ nav a:hover {
 
 /* Main Content */
 main {
+    margin-top: 20px;
     margin-left: 150px;
     margin-right: 150px;
     padding: 50px;
